--- a/production/imports/ui/pages/course.html
+++ b/production/imports/ui/pages/course.html
@@ -109,7 +109,7 @@
                                             <i class="fa fa-2x fa-times"></i>
                                         </div>
                                         <h4 class="presenter-section">Section Title</h4>
-                                        <h3>{{_ "details.course.epand_a"}} <span class="important achieved">10</span> {{_ "details.course.expand_b"}} <span class="important out-of">10</span></h3>
+                                        <h3>{{_ "details.course.expand_a"}} <span class="important achieved">10</span> {{_ "details.course.expand_b"}} <span class="important out-of">10</span></h3>
                                         <h5 class="mb-30">{{_ "details.course.weight"}}: <span class="weight">10</span></h5>
 <!--                                        <h4 class="text-left">Insights:</h4>
                                         <ul class="text-left">
