--- a/imports/ui/pages/dashboard.html
+++ b/imports/ui/pages/dashboard.html
@@ -386,7 +386,7 @@
                         </div>
                     {{/each}}
                     <hr>
-                    <button class="btn btn-wide btn-primary" id="coursesLoadMore">Load More</button>
+                    <button class="btn btn-wide btn-primary" id="clubsLoadMore">Load More</button>
                 </div>
             </div>
         </div>
