--- a/imports/ui/pages/dashboard.html
+++ b/imports/ui/pages/dashboard.html
@@ -175,7 +175,7 @@
                                         <p class="draft-body">{{content}}</p>
                                     </div>
                                     <div class="operations">
-                                        <button class="btn btn-reject"><i class="fa fa-times"></i> Remove</button>
+                                        <button class="btn btn-remove"><i class="fa fa-times"></i> Remove</button>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <button class="btn btn-reject"><i class="fa fa-times"></i> Remove</button>
+                                        <button class="btn btn-remove"><i class="fa fa-times"></i> Remove</button>
                                     </div>
                                 </div>
                             </div>
