Disabled Academics and Stories For Now

--- a/imports/ui/pages/firstTime.html
+++ b/imports/ui/pages/firstTime.html
@@ -11,12 +11,12 @@
                                     <h2>{{_ "first.greet"}}</h2>
                                     <p>{{_ "first.greet_more"}}</p>
                                 </div>
-                                <div id="teachIntro" hidden>
+<!--                                <div id="teachIntro" hidden>
                                     <h2>{{_ "first.teach"}}</h2>
                                     <p>
                                         {{_ "first.teach_more"}}
                                     </p>
-                                </div>
+                                </div>-->
                                 <div id="interestIntro" hidden>
                                     <h2>{{_ "first.teach_t"}}</h2>
                                     <p>
@@ -42,7 +42,7 @@
                                         {{_ "first.btn.intro"}}
                                     </a>
                                 </div>
-                                <div class="info-form" id="teachAssistInfo" hidden>
+<!--                                <div class="info-form" id="teachAssistInfo" hidden>
                                     <form class="teach-assist-login" id="teachAssistForm">
                                         <input type="text" id="teachUser" placeholder="{{_ "first.input.sNum"}}">
                                         <input type="password" id="teachPass" placeholder="{{_ "first.input.sPass"}}">
@@ -53,7 +53,7 @@
                                         <span class="sr-only">{{_ "loading"}}</span>
                                     </div>
                                     <span>{{_ "first.teach_skip"}} <a href="" id="skipNext">{{_ "first.btn.skip"}}</a></span>
-                                </div>
+                                </div>-->
                                 <div class="info-form" id="interestFormIntro" hidden>
                                     <form class="select-organizations" id="interestForm">
                                         <div class="form-group mb-15">
