Day -something patch
Login and Accounts system repairing

--- a/imports/ui/pages/firstTime.html
+++ b/imports/ui/pages/firstTime.html
@@ -18,9 +18,9 @@
                                     </p>
                                 </div>-->
                                 <div id="interestIntro" hidden>
-                                    <h2>{{_ "first.teach_t"}}</h2>
+                                    <h2>Notifications</h2>
                                     <p>
-                                        {{_ "first.teach_t_more"}}
+                                        If you want us to alert you when an announcement about your club is published, please select all the categories and clubs you are interested in.
                                     </p>
                                 </div>
                                 <div id="emailIntro" hidden>
@@ -126,7 +126,7 @@
                             <hr />
                             <div class="card-body">
                                 <div class="info-form" id="beginIntro">
-                                    <a href="" class="btn btn-lg btn-login" id="startFirst">
+                                    <a href="" class="btn btn-lg btn-login" id="startFirstTeach">
                                         {{_ "first.btn.intro"}}
                                     </a>
                                 </div>
