--- a/imports/ui/pages/login.html
+++ b/imports/ui/pages/login.html
@@ -5,9 +5,9 @@
         </div>
         <div class="login-menu ">
             <ul class="login-menu-items">
-                <li class="hidden-xs hidden-sm"><a href="http://google.ca" >{{_ "login.about"}}</a></li>
-                <li class="hidden-xs hidden-sm"><a href="http://google.ca">{{_ "login.help"}}</a></li>
-                <li class="hidden-xs hidden-sm"><a href="http://google.ca">{{_ "login.legal"}}</a></li>
+                <li class="hidden-xs hidden-sm"><a>{{_ "login.about"}}</a></li>
+                <li class="hidden-xs hidden-sm"><a>{{_ "login.help"}}</a></li>
+                <li class="hidden-xs hidden-sm"><a>{{_ "login.legal"}}</a></li>
             </ul>
         </div>
         <div class="col-lg-8 col-md-8 jumbotron-area hidden-sm hidden-xs">
@@ -15,11 +15,13 @@
                 <h1 class="jumbotron-greeting">{{_ "login.welcome"}}</h1>
                 <span class="jumbotron-title">Here are some important information</span>
                 <p class="jumbotron-details">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi delectus dolore ea est excepturi id, qui quo ratione sapiente suscipit? At cupiditate deserunt dolorum expedita facere illum nisi non quod.
-                    ommodi consectetur doloremque eius enim neque nostrum, reprehenderit repudiandae. Ab aspernatur cumque dolore doloribus eaque fugit illo ipsam ipsum minima nam nisi odio officia omnis, quasi quisquam sunt totam vitae.
-                    Adipisci alias aspernatur deleniti dolores exercitationem facilis illo ipsa laboriosam minima necessitatibus nemo nesciunt, non optio porro praesentium quae quia quos reiciendis sequi, soluta suscipit tempore tenetur ullam vero voluptas!
+                    Thank you so much for trying out uhs.life, the first app by School Dot Life Foundation.
+                    To log into the app click on the button on the right, if you need detailed instructions on how to login to our app,
+                    please click the read more button, you will be redirected to a tutorial on how to login. We are working hard on optimizing the login experience,
+                    however, we have quite a lot of things to take care of first. Uhs.life is currently going through what we call "Advanced Beta" stage, which means
+                    although we are at official release, we are not yet able to ensure uptime and consistency, thank you for understanding!
                 </p>
-                <a class="btn btn-lg btn-white">{{_ "login.read_more"}}</a>
+                <a class="btn btn-lg btn-white" href="https://medium.com/uhslife/how-to-login-to-uhs-life-3dd66c89fae8">{{_ "login.read_more"}}</a>
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 login-area">
