--- a/imports/ui/pages/firstTime.html
+++ b/imports/ui/pages/firstTime.html
@@ -142,7 +142,7 @@
                                         </div>
                                         <input type="submit" class="btn btn-primary btn-lg btn-login mb-15" value="Confirm">
                                     </form>
-                                    <span>{{_ "first.teach_t_skip"}} <a href="" id="skipNext">{{_ "first.btn.skip"}}</a></span>
+                                    <span>{{_ "first.teach_t_skip"}} <a href="" id="skipNextTeach">{{_ "first.btn.skip"}}</a></span>
                                 </div>
                                 <div class="info-form" id="subscriptionEmail" hidden>
                                     <form id="newsletterEmailForm">
