--- a/imports/ui/pages/stream.html
+++ b/imports/ui/pages/stream.html
@@ -17,19 +17,16 @@
                         <div class="grid-item image {{categories}}" tabindex="0">
                             <div class="item-container">
                                 <img class="img-responsive" src="{{imageLink}}" alt="{{headline}}"/>
-                                <div class="overlay-small">
-                                    <div class="text">
-                                        <h4 aria-hidden="true">{{headline}}</h4>
-                                        <div class="image-only-author">
-                                            <p>{{writer}}</p>
-                                        </div>
-                                    </div>
-                                </div>
+                            </div>
+                            <div class="main-info">
+                                <h3>{{headline}}</h3>
+                                <p class="text-muted">{{writer}}</p>
+                                <span class="grid-item-footer">{{_ "stream.time_range"}}: {{effectiveDate}}</span>
                             </div>
                         </div>
                     {{/ if}}
                     {{#if isTextOnly}}
-                        <div class="grid-item {{categories}}">
+                        <div class="grid-item {{categories}}" tabindex="0">
                             <div class="post-title mb-10">
                                 <h3>{{headline}}</h3>
                             </div>
@@ -39,18 +36,30 @@
                             <span class="grid-item-footer">{{writer}} | {{_ "stream.time_range"}}: {{effectiveDate}}</span>
                         </div>
                     {{/ if}}
+                    {{#if isVideo}}
+                        <div class="grid-item {{categories}} image" tabindex="0">
+                            <div class="video-wrapper">
+                                <iframe src="https://www.youtube-nocookie.com/embed/{{videoId}}?rel=0&amp;controls=1" frameborder="0" id="videoPreviewFrame" allowfullscreen></iframe>
+                            </div>
+                            <div class="main-info">
+                                <h3>{{headline}}</h3>
+                                <p class="text-muted">{{writer}}</p>
+                                <span class="grid-item-footer">{{_ "stream.time_range"}}: {{effectiveDate}}</span>
+                            </div>
+
+                        </div>
+                    {{/ if}}
                     {{#if isImageText}}
                         {{#if imageOverText}}
                             <div class="grid-item image {{categories}}" tabindex="0">
                                 <div class="item-container">
                                     <img src="{{imageLink}}" alt="{{headline}}" class="item-image">
-                                    <div class="overlay">
-                                        <div class="text">
-                                            <h3 aria-hidden="true">{{headline}}</h3>
-                                            <span>{{writer}}</span>
-                                            <p>{{content}}</p>
-                                        </div>
-                                    </div>
+                                </div>
+                                <div class="main-info">
+                                    <h3>{{headline}}</h3>
+                                    <p class="text-muted">{{writer}}</p>
+                                    <p>{{content}}</p>
+                                    <span class="grid-item-footer">{{_ "stream.time_range"}}: {{effectiveDate}}</span>
                                 </div>
                             </div>
                         {{/ if}}
