--- a/imports/ui/pages/dashboard.html
+++ b/imports/ui/pages/dashboard.html
@@ -132,7 +132,7 @@
                                     <p>Roles: {{roles}}</p>
                                 </div>
                                 <div class="col-lg-6 text-muted">
-                                    <p>Gender: Male</p>
+                                    <p>Gender: {{services.google.gender}}</p>
                                     <p>Initialized: {{profile.init}}</p>
                                     <p>Mailing List Email: {{profile.email}}</p>
                                 </div>
