--- a/imports/ui/pages/login.html
+++ b/imports/ui/pages/login.html
@@ -30,27 +30,8 @@
                 <a class="btn btn-primary btn-lg btn-login ptb-30" id="googleLogin" href="">
                     <i class="fa fa-fw fa-2x fa-google" aria-hidden="true"></i> {{_ "login.main_btn"}}
                 </a>
+                <p class="text-muted mt-15">Please Note That You Can Only Login With Your YRDSB Gapps Account</p>
             </div>
-
-<!--            <div class="form">
-                <form class="register-form">
-                    <h1>Register</h1>
-                    <input type="text" placeholder="First Name" name="firstName" />
-                    <input type="text" placeholder="Last Name" name="lastName"/>
-                    <span class="email-warning">This email is invalid</span>
-                    <input type="email" placeholder="Email Address" id="registerEmail" name="registerEmail"/>
-                    <input type="password" placeholder="Password" name="registerPassword"/>
-                    <input type="submit" value="Let's Go!" id="registerSubmit"/>
-                    <p class="message">Already registered? <a href="" class="operation">Sign In</a></p>
-                </form>
-                <form class="login-form">
-                    <h1>Login</h1>
-                    <input type="text" placeholder="Email" name="email"/>
-                    <input type="password" placeholder="Password" name="password"/>
-                    <input type="submit" value="Login"/>
-                    <p class="message">Not registered? <a href="" class="operation">Create an account</a></p>
-                </form>
-            </div>-->
         </div>
     </div>
 
