fixed registration bug

--- a/imports/ui/pages/login.html
+++ b/imports/ui/pages/login.html
@@ -30,7 +30,7 @@
                 <a class="btn btn-primary btn-lg btn-login ptb-30" id="googleLogin" href="">
                     <i class="fa fa-fw fa-2x fa-google" aria-hidden="true"></i> {{_ "login.main_btn"}}
                 </a>
-                <p class="text-muted mt-15">Please Note That You Can Only Login With Your YRDSB Gapps Account{{url}}</p>
+                <p class="text-muted mt-15">Please Note That You Can Only Login With Your YRDSB Gapps Account</p>
             </div>
         </div>
     </div>
