finish implementation of calendar

--- a/imports/ui/pages/calendar.html
+++ b/imports/ui/pages/calendar.html
@@ -1,9 +1,6 @@
 <template name="calendar">
-    {{> navigation}}
     {{> editor}}
-    <div class="container main">
-        <div class="row content">
-            <div class="calendar"></div>
-        </div>
+    <div class="container-fluid">
+        <div class="calendar"></div>
     </div>
 </template>
